Fix overlapping CSS with other modules and redo relative sizes

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,15 +2,17 @@
 /* PARENT CONTAINER */
 /* ====================================== */
 
-.container {
+.review-container {
   display: flex;
   flex-direction: column;
   padding-right: 40vw;
   padding-left: 10vw;
-  width: 800px;
+  width: 50vw;
+  min-width: 700px;
   font-family: sans-serif;
   font-weight: lighter;
-  background-color: #eee;
+  justify-content: stretch;
+  align-items: stretch;
 }
 
 /* ====================================== */
@@ -20,6 +22,7 @@
   display: flex;
   flex-direction: row;
   background: #fff;
+  width: 100%;
 }
 
 .tab {
@@ -81,7 +84,7 @@
 /* HEADER */
 /* ====================================== */
 
-.header {
+.reviews-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -95,6 +98,8 @@
   padding-left: 20px;
   padding-right: 20px;
   background-color: #fff;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #subtitle {
@@ -139,6 +144,8 @@
   padding-right: 20px;
   padding-top: 15px;
   font-size: 13px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 input:hover, #lang-btn:hover {
@@ -230,6 +237,8 @@ input:hover, #lang-btn:hover {
   background: #fff;
   padding-left: 20px;
   padding-right: 20px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #popular-mentions-title {
@@ -252,6 +261,8 @@ input:hover, #lang-btn:hover {
   font-weight: 300;
   padding: 11px;
   text-align: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #search-icon {
@@ -317,6 +328,8 @@ input:hover, #lang-btn:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #qa-page {
@@ -327,6 +340,8 @@ input:hover, #lang-btn:hover {
   align-items: center;
   background-color: #fff;
   margin-bottom: 20px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 /* ====================================== */
